# transaction-service

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  pyproject.toml  setup.cfg  wait_for_auth.py
.devcontainer/: devcontainer.json  docker-compose.yml
helm/transaction-service-pompeeva/: Chart.yaml  values.yaml
helm/transaction-service-pompeeva/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
helm/transaction-service-pompeeva/values/: test.yaml
k8s/: alembic-job.yaml  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/app/: config.py  database.py  main.py  redis.py
src/app/core/: service.py  user_storage.py
src/app/crud/: transactions_crud.py
src/app/endpoints/: endpoints.py
src/app/models/: transactions.py
src/app/schemas/: schemas.py
src/db/: face_vectors_scripts.sql  model.txt  model_extra.txt  transaction_scripts.sql  user_scripts.sql
src/migration/: env.py
src/migration/versions/: 78680546e088_initial.py  894dc483bbb9_.py  9652267bfebf_.py
src/tests/: conftest.py  test_main.py
src/tests/unit/: test_main.py
src/tests/unit/core/: conftest.py  test_service.py
src/tests/unit/endpoints/: conftest.py  test_endpoints.py
