[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.14.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"
asyncio = "^3.4.3"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.32"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 [tool.pytest.ini_options]
 asyncio_mode = "auto"
